# example-snowflake

./: README.md  pyproject.toml  query.ipynb
credentials/: .gitignore  example-account.json
